# pysharpe

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
PyQuant.egg-info/: SOURCES.txt  requires.txt  top_level.txt
Pysharpe.egg-info/: PKG-INFO
pyquant/: __init__.py  monthly_weight_systems.py  quick_analysis.py
pysharpe/: __init__.py  quick_analysis.py
