[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PySharpe"
version = "0.1.0"
description = "Open research toolkit for portfolio analytics and visualization."
authors = [{ name = "PySharpe Research", email = "contact@pysharpe.org" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "XlsxWriter>=3.1.0"
]

[project.urls]
Homepage = "https://github.com/pysharpe-research/PySharpe"
Documentation = "https://pysharpe.org/docs"
Source = "https://github.com/pysharpe-research/PySharpe"
Issues = "https://github.com/pysharpe-research/PySharpe/issues"

[tool.setuptools.packages.find]
where = ["."]
